src/objects/Specialization__c.object
<CustomObject>
    <fields>
        <fullName>Advance_Amount_Given__c</fullName>
        <label>Advance Amount Given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_CDPs_launched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Enrollment Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Pay_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Pay enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Parent_Opportunity__r.Campaign.Name</formula>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Letter_signed__c</fullName>
        <label>Confirmation Letter (signed)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_Prices_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Prices Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Progression_Rate_CPR__c</fullName>
        <label>Course Progression Rate (CPR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Verification_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Verification Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courses_Draft_in_S12N__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label># Courses Draft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courses_Launched_in_S12N__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label># Courses Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courses_in_S12N__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label># Courses in S12N</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cume_Cash_Sales_Revenue__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Cume Cash Sales (Revenue)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Difficulty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_pg_subs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable PG &amp; Subs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_premium_grading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable premium grading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ensure_FAQ_for_s12n_model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ensure FAQ for s12n model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_SDP_Launch_Date__c</fullName>
        <label>Expected SDP Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locked_Capstone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Capstone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Questionnaire__c</fullName>
        <label>Marketing Questionnaire</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mktg_SDP_banner__c</fullName>
        <label>Mktg - SDP banner</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mktg_SDP_copy__c</fullName>
        <label>Mktg - SDP copy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PG_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>PG enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Specializations</relationshipLabel>
        <relationshipName>Specializations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlatPlatform_Link_to_Content__c</fullName>
        <formula>&quot;www.coursera.org/teach-specialization/&quot; + Name</formula>
        <label>Platform Link to Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_on_mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing on mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Domain__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Primary Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subdomain__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Primary Subdomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Stage__c</fullName>
        <label>Production Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Production</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Live &amp; In Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Notes__c</fullName>
        <label>QA Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S12N_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>S12N ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>S12N_Launch_Date__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>S12N Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S12N_Launch_Month__c</fullName>
        <formula>CASE(MONTH( S12N_Launch_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <label>S12N Launch - Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S12N_Launch_Quarter__c</fullName>
        <formula>CASE(MONTH(  S12N_Launch_Date__c  ), 
1, &quot;Q1&quot;, 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;)</formula>
        <label>S12N Launch - Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S12N_Launch_Year__c</fullName>
        <formula>CASE(YEAR(  S12N_Launch_Date__c  ), 
2012, &quot;2012&quot;, 
2013, &quot;2013&quot;, 
2014, &quot;2014&quot;, 
2015, &quot;2015&quot;, 
2016, &quot;2016&quot;, 
2017, &quot;2017&quot;, 
2018, &quot;2018&quot;, 
2019, &quot;2019&quot;, 
2020, &quot;2020&quot;, 
&quot;None&quot;)</formula>
        <label>S12N Launch - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S12N_Name__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>S12N Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S12N_SFDC_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>S12N SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDP_Copy_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDP Copy Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Domain__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Secondary Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Subdomain__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Secondary Subdomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourcing_Cycle__c</fullName>
        <formula>TEXT(Parent_Opportunity__r.Launch_Cycle__c)</formula>
        <label>Sourcing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriptions_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscriptions enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Enrollments__c</fullName>
        <inlineHelpText>Pulled from EDW</inlineHelpText>
        <label>Total Paid Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Specialization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Specialization URL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specializations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>